--- a/tests/Iliev-5/Iliev-5.ipynb
+++ b/tests/Iliev-5/Iliev-5.ipynb
@@ -53,7 +53,10 @@
     "from plotly.subplots import make_subplots\n",
     "pio.templates.default = \"simple_white\"\n",
     "\n",
-    "from math import pi"
+    "from math import pi\n",
+    "\n",
+    "FIGURE_DIR = './figures'\n",
+    "Path(FIGURE_DIR).mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -115,8 +118,9 @@
    "source": [
     "ILIEV_5_DIR = 'astronomy.sussex.ac.uk/~iti20/RT_comparison_project/RT_workshop_data/T5_results'\n",
     "\n",
-    "IMAGE_DIR = './images'\n",
-    "Path(IMAGE_DIR).mkdir(parents=True, exist_ok=True)\n",
+    "FIGURE_DIR = './images'\n",
+    "Path(FIGURE_DIR).mkdir(parents=True, exist_ok=True)\n",
+    "\n",
     "TIMES = [10, 30, 100, 200, 500]\n",
     "\n",
     "COLORS = px.colors.qualitative.Pastel\n",
@@ -166,43 +170,43 @@
     "}\n",
     "\n",
     "RHYME = {\n",
-    "    'Rhyme CaseA Lin 3': {\n",
-    "        'mapPlot': False, 'color': COLORS2[0], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
-    "        0: {'path': './Iliev-5-CaseA-3bins/Iliev-5-CaseA-3bins-000000.chombo.h5'}\n",
-    "    },\n",
-    "    'Rhyme CaseA Lin 10': {\n",
-    "        'mapPlot': False, 'color': COLORS2[0], 'style': 'dashdot', 'opacity': 1, 'lw': 1.25,\n",
-    "        0: {'path': './Iliev-5-CaseA-10bins/Iliev-5-CaseA-10bins-000000.chombo.h5'}\n",
-    "    },\n",
-    "    'Rhyme CaseA Lin 30': {\n",
-    "        'mapPlot': False, 'color': COLORS2[0], 'style': 'dash', 'opacity': 1, 'lw': 1.25,\n",
-    "        0: {'path': './Iliev-5-CaseA-30bins/Iliev-5-CaseA-30bins-000000.chombo.h5'}\n",
-    "    },\n",
-    "    'Rhyme CaseA Lin 100': {\n",
-    "        'mapPlot': False, 'color': COLORS2[0], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
-    "        0: {'path': './Iliev-5-CaseA-100bins/Iliev-5-CaseA-100bins-000000.chombo.h5'}\n",
-    "    },\n",
-    "    'Rhyme CaseA Log 3': {\n",
-    "        'mapPlot': True, 'color': COLORS2[1], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
-    "        0: {'path': './Iliev-5-CaseA-logBins-3bins/Iliev-5-CaseA-logBins-3bins-000000.chombo.h5'}\n",
-    "    },\n",
-    "    'Rhyme CaseA Log 10': {\n",
-    "        'mapPlot': False, 'color': COLORS2[1], 'style': 'dashdot', 'opacity': 1, 'lw': 1.25,\n",
-    "        0: {'path': './Iliev-5-CaseA-logBins-10bins/Iliev-5-CaseA-logBins-10bins-000000.chombo.h5'}\n",
-    "    },\n",
-    "    'Rhyme CaseA Log 30': {\n",
-    "        'mapPlot': False, 'color': COLORS2[1], 'style': 'dash', 'opacity': 1, 'lw': 1.25,\n",
-    "        0: {'path': './Iliev-5-CaseA-logBins-30bins/Iliev-5-CaseA-logBins-30bins-000000.chombo.h5'}\n",
-    "    },\n",
-    "    'Rhyme CaseA Log 100': {\n",
+    "#     'Rhyme CaseA Lin 3': {\n",
+    "#         'mapPlot': False, 'color': COLORS2[0], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
+    "#         0: {'path': './Iliev-5-CaseA-3bins/Iliev-5-CaseA-3bins-000000.chombo.h5'}\n",
+    "#     },\n",
+    "#     'Rhyme CaseA Lin 10': {\n",
+    "#         'mapPlot': False, 'color': COLORS2[0], 'style': 'dashdot', 'opacity': 1, 'lw': 1.25,\n",
+    "#         0: {'path': './Iliev-5-CaseA-10bins/Iliev-5-CaseA-10bins-000000.chombo.h5'}\n",
+    "#     },\n",
+    "#     'Rhyme CaseA Lin 30': {\n",
+    "#         'mapPlot': False, 'color': COLORS2[0], 'style': 'dash', 'opacity': 1, 'lw': 1.25,\n",
+    "#         0: {'path': './Iliev-5-CaseA-30bins/Iliev-5-CaseA-30bins-000000.chombo.h5'}\n",
+    "#     },\n",
+    "#     'Rhyme CaseA Lin 100': {\n",
+    "#         'mapPlot': False, 'color': COLORS2[0], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
+    "#         0: {'path': './Iliev-5-CaseA-100bins/Iliev-5-CaseA-100bins-000000.chombo.h5'}\n",
+    "#     },\n",
+    "#     'Rhyme CaseA Log 3': {\n",
+    "#         'mapPlot': True, 'color': COLORS2[1], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
+    "#         0: {'path': './Iliev-5-CaseA-logBins-3bins/Iliev-5-CaseA-logBins-3bins-000000.chombo.h5'}\n",
+    "#     },\n",
+    "#     'Rhyme CaseA Log 10': {\n",
+    "#         'mapPlot': False, 'color': COLORS2[1], 'style': 'dashdot', 'opacity': 1, 'lw': 1.25,\n",
+    "#         0: {'path': './Iliev-5-CaseA-logBins-10bins/Iliev-5-CaseA-logBins-10bins-000000.chombo.h5'}\n",
+    "#     },\n",
+    "#     'Rhyme CaseA Log 30': {\n",
+    "#         'mapPlot': False, 'color': COLORS2[1], 'style': 'dash', 'opacity': 1, 'lw': 1.25,\n",
+    "#         0: {'path': './Iliev-5-CaseA-logBins-30bins/Iliev-5-CaseA-logBins-30bins-000000.chombo.h5'}\n",
+    "#     },\n",
+    "    'Rhyme CaseA': { # 'Rhyme CaseA Log 100': {\n",
     "        'mapPlot': True, 'color': COLORS2[1], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-CaseA-logBins-100bins/Iliev-5-CaseA-logBins-100bins-000000.chombo.h5'}\n",
     "    },\n",
-    "    'Rhyme CaseB Log 3': {\n",
-    "        'mapPlot': True, 'color': COLORS2[2], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
-    "        0: {'path': './Iliev-5-CaseB-logBins-3bins/Iliev-5-CaseB-logBins-3bins-000000.chombo.h5'}\n",
-    "    },\n",
-    "    'Rhyme CaseB Log 100': {\n",
+    "#     'Rhyme CaseB Log 3': {\n",
+    "#         'mapPlot': True, 'color': COLORS2[2], 'style': 'dot', 'opacity': 1, 'lw': 1.25,\n",
+    "#         0: {'path': './Iliev-5-CaseB-logBins-3bins/Iliev-5-CaseB-logBins-3bins-000000.chombo.h5'}\n",
+    "#     },\n",
+    "    'Rhyme CaseB': { # 'Rhyme CaseB Log 100': {\n",
     "        'mapPlot': True, 'color': COLORS2[2], 'style': None, 'opacity': 1, 'lw': 1.25,\n",
     "        0: {'path': './Iliev-5-logBins-CaseB-100bins/Iliev-5-logBins-CaseB-100bins-000000.chombo.h5'}\n",
     "    },\n",
@@ -378,14 +382,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_maps(x, y, heatmaps):\n",
+    "def plot_maps(x, y, heatmaps, width, height):\n",
     "    titles = {\n",
-    "        'Rhyme CaseA Log 100': {'name': 'Rhyme CaseA', 'num': 0},\n",
+    "        'Rhyme CaseA': {'name': 'Rhyme CaseA', 'num': 0},\n",
     "        'CAPREOLE+C2-RAY': {'name': 'C2Ray', 'num': 1},\n",
     "        'Enzo': {'name': 'Enzo', 'num': 2},\n",
     "        'Flash': {'name': 'Flash', 'num': 3},\n",
     "        'HART': {'name': 'HART', 'num': 4},\n",
-    "        'Rhyme CaseB Log 100': {'name': 'Rhyme CaseB', 'num': 5},\n",
+    "        'Rhyme CaseB': {'name': 'Rhyme CaseB', 'num': 5},\n",
     "        'LICORICE': {'name': 'Licorice', 'num': 6},\n",
     "        'RSPH': {'name': 'RSPH', 'num': 7},\n",
     "        'RH1D': {'name': 'RH1D', 'num': 8},\n",
@@ -440,7 +444,7 @@
     "                    thicknessmode='pixels', thickness=10, tickfont=dict(size=18),\n",
     "                    x=1.02, y=slc/n_slices, len=1/n_slices, xanchor='left', yanchor='bottom',\n",
     "                ),\n",
-    "                colorscale=attr_cs[attr], showscale=True if sn == 'Rhyme_CaseA' else False,\n",
+    "                colorscale=attr_cs[attr], showscale=True if sn == 'Rhyme CaseA' else False,\n",
     "            ), h['row'], h['col'])\n",
     "            \n",
     "            if h['row'] == 4 or sn == 'Rhyme Log 3':\n",
@@ -491,9 +495,6 @@
     "            text=titles[sn]['name'], showarrow=False,\n",
     "            font=dict(color='white', size=22 if h['col'] == 1 else 14), \n",
     "        )\n",
-    "            \n",
-    "\n",
-    "    width, height = 1100, 1000\n",
     "    \n",
     "    fig.update_layout(\n",
     "        width=width, height=height,\n",
@@ -507,11 +508,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "def fHI_maps(t=200):\n",
+    "def maps(t=200):\n",
     "    if t not in DATA.keys():\n",
     "        print(f\"Don't have a snapshot at t = {t} Myr\")\n",
     "        return\n",
@@ -523,10 +524,10 @@
     "            if not RHYME[sn]['mapPlot']:\n",
     "                continue\n",
     "        heatmaps[sn] = {}\n",
-    "        if sn == 'Rhyme CaseA Log 100':\n",
+    "        if sn == 'Rhyme CaseA':\n",
     "            heatmaps[sn]['row'] = 1\n",
     "            heatmaps[sn]['col'] = 1\n",
-    "        elif sn == 'Rhyme CaseB Log 100':\n",
+    "        elif sn == 'Rhyme CaseB':\n",
     "            heatmaps[sn]['row'] = 3\n",
     "            heatmaps[sn]['col'] = 1\n",
     "        elif sn[:5] == 'Rhyme':\n",
@@ -542,17 +543,20 @@
     "        heatmaps[sn]['fHI'] = np.log10(sim['nHI'][:, :, l] / (sim['nHI'][:, :, l] + sim['nHII'][:, :, l]))\n",
     "    \n",
     "    x = np.linspace(0, 15, 128)\n",
-    "        \n",
-    "    fig = plot_maps(x, x, heatmaps)\n",
+    "    width, height = 1100, 1000\n",
     "    \n",
+    "    fig = plot_maps(x, x, heatmaps, width, height)\n",
+    "    \n",
+    "    fig.write_image(f\"{FIGURE_DIR}/iliev-5-maps-{int(t):03d}.svg\", width=width, height=height)\n",
+    "    fig.write_image(f\"{FIGURE_DIR}/iliev-5-maps-{int(t):03d}.png\", width=width, height=height, scale=3)\n",
     "    fig.show()\n",
     "\n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "    fHI_maps(t=10)\n",
-    "    fHI_maps(t=30)\n",
-    "    fHI_maps(t=100)\n",
-    "    fHI_maps(t=200)\n",
-    "    fHI_maps(t=500)"
+    "    maps(t=10)\n",
+    "    maps(t=30)\n",
+    "    maps(t=100)\n",
+    "    maps(t=200)\n",
+    "    maps(t=500)"
    ]
   },
   {
@@ -568,73 +572,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_lineouts(ts, attr, title):\n",
-    "    colors = px.colors.qualitative.Dark24 # Pastel\n",
+    "def plot_lineouts(ts, attrs, titles):\n",
+    "    colors = px.colors.sample_colorscale(px.colors.diverging.Portland_r, np.linspace(0, 1, len(DATA[10].keys())))\n",
     "    \n",
     "    len_t = len(ts)\n",
     "    \n",
     "    fig = make_subplots(\n",
-    "        1, len_t,\n",
-    "        column_widths=[1] * len_t, row_heights=[1],\n",
+    "        len(attrs), len_t,\n",
+    "        column_widths=[1] * len_t, row_heights=[1] * len(attrs),\n",
     "        vertical_spacing=0.025, horizontal_spacing=0.025,\n",
     "        shared_xaxes=False, shared_yaxes=True,\n",
-    "        x_title='x / L<sub>box</sub>', y_title=title,\n",
+    "        x_title='x / L<sub>box</sub>',\n",
     "        subplot_titles=[f\"t = {t} Myr\" for t in ts],\n",
     "    )\n",
     "    \n",
-    "    fig.layout.annotations[0][\"font\"] = dict(size=18, color='black')\n",
-    "    fig.layout.annotations[1][\"font\"] = dict(size=18, color='black')\n",
-    "    \n",
-    "    for i in range(2, 2+len_t):\n",
+    "    for i in range(len_t):\n",
     "        fig.layout.annotations[i][\"font\"] = dict(size=18, color='black')\n",
+    "        fig.layout.annotations[i][\"y\"] += 0.0125\n",
+    "\n",
+    "    fig.layout.annotations[len_t][\"font\"] = dict(size=18, color='black')\n",
+    "    fig.layout.annotations[len_t][\"y\"] -= 0.0125\n",
     "    \n",
-    "    for i, t in enumerate(ts):\n",
-    "        for si, (sn, sim) in enumerate(DATA[t].items()):\n",
-    "            x = np.linspace(0, 1, len(sim['nHI'][:, 0, 0]))\n",
-    "            l = 1\n",
-    "            if attr == 'fHI':\n",
-    "                y = np.log10(sim['nHI'][:, l, l] / (sim['nHI'][:, l, l] + sim['nHII'][:, l, l]))\n",
-    "            else:\n",
-    "                y = np.log10(sim[attr][:, l, l])\n",
-    "                \n",
-    "            fig.add_trace(go.Scatter(\n",
-    "                x=x, y=y, name=f\"{sn}\", mode='lines',\n",
-    "                opacity=sim['opacity'],\n",
-    "                line=dict(color=sim['color'], dash=sim['style'], width=sim['lw']),\n",
-    "                showlegend=True if i == 0 else False,\n",
-    "            ), 1, i+1)\n",
+    "    for irow, attr in enumerate(attrs):\n",
+    "        for icol, t in enumerate(ts):\n",
+    "            for si, (sn, sim) in enumerate(DATA[t].items()):\n",
+    "                x = np.linspace(0, 1, len(sim['nHI'][:, 0, 0]))\n",
+    "                l = 1\n",
+    "                if attr == 'fHI':\n",
+    "                    y = np.log10(sim['nHI'][:, l, l] / (sim['nHI'][:, l, l] + sim['nHII'][:, l, l]))\n",
+    "                else:\n",
+    "                    y = np.log10(sim[attr][:, l, l])\n",
+    "\n",
+    "                fig.add_trace(go.Scatter(\n",
+    "                    x=x, y=y, name=f\"{sn}\", mode='lines',\n",
+    "                    opacity=sim['opacity'],\n",
+    "                    line=dict(color=colors[si], dash=None, width=1),\n",
+    "                    showlegend=True if irow == icol == 0 else False,\n",
+    "                ), irow+1, icol+1)\n",
+    "\n",
+    "                fig.update_xaxes(\n",
+    "                    row=irow+1, col=icol+1, type='linear', mirror=True, range=(2/128, 1),\n",
+    "                    titlefont=dict(size=18), tickfont=dict(size=14),\n",
+    "                    tickmode='array', tickvals=[2/128, 0.5, 1], ticktext=['0', '.5', '1'],\n",
+    "                )\n",
+    "\n",
+    "                tickvals = list(range(-40, 20, 2))\n",
+    "                ticktext = [f\"10<sup>{x}</sup>\" for x in tickvals]\n",
+    "\n",
+    "                fig.update_yaxes(\n",
+    "                    row=irow+1, col=icol+1, mirror=True,\n",
+    "                    title=titles[irow] if icol == 0 else None,\n",
+    "                    titlefont=dict(size=18), tickfont=dict(size=14),\n",
+    "                    tickmode='array', tickvals=tickvals, ticktext=ticktext,\n",
+    "                    showticklabels=True if icol == 0 else False,\n",
+    "                )\n",
     "            \n",
-    "            fig.update_xaxes(\n",
-    "                row=1, col=i+1, type='linear', mirror=True, range=(2/128, 1),\n",
-    "                titlefont=dict(size=18), tickfont=dict(size=14),\n",
-    "                tickmode='array', tickvals=[2/128, 0.5, 1], ticktext=['0', '.5', '1'],\n",
-    "            )\n",
-    "            \n",
-    "            tickvals = list(range(-40, 20, 2))\n",
-    "            ticktext = [f\"10<sup>{x}</sup>\" for x in tickvals]\n",
-    "            \n",
-    "            fig.update_yaxes(\n",
-    "                row=1, col=i+1, mirror=True,\n",
-    "                titlefont=dict(size=18), tickfont=dict(size=14),\n",
-    "                tickmode='array', tickvals=tickvals, ticktext=ticktext,\n",
-    "                showticklabels=True if i == 0 else False,\n",
-    "            )\n",
-    "            \n",
-    "    width = 500 if len_t <= 2 else 1000\n",
-    "    height = width / len_t + 160\n",
+    "    width = 1000\n",
+    "    height = 750\n",
     "    \n",
     "    fig.update_layout(\n",
     "        width=width, height=height,\n",
-    "        margin=dict(t=60, r=60, b=60, l=80),\n",
-    "        legend=dict(orientation=\"h\", yanchor=\"top\", y=-.4, xanchor=\"right\", x=1),\n",
+    "        margin=dict(t=60, r=60, b=70, l=80),\n",
+    "        legend=dict(orientation=\"h\", yanchor=\"top\", y=1.12, xanchor=\"center\", x=.5),\n",
     "    )\n",
     "    \n",
+    "    fig.write_image(f\"{FIGURE_DIR}/iliev-5-lineouts.svg\", width=width, height=height)\n",
+    "    fig.write_image(f\"{FIGURE_DIR}/iliev-5-lineouts.png\", width=width, height=height, scale=3)\n",
     "    fig.show()\n",
     "\n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
-    "    plot_lineouts([10, 100, 200, 500], 'p', 'p [g / m s<sup>2</sup>]')\n",
-    "    plot_lineouts([10, 100, 200, 500], 'T', 'T [K]')\n",
-    "    plot_lineouts([10, 100, 200, 500], 'fHI', 'f<sub>HI</sub>')"
+    "    plot_lineouts([10, 100, 200, 500], ['p', 'T', 'fHI'], ['p [g / m s<sup>2</sup>]', 'T [K]', 'f<sub>HI</sub>'])"
    ]
   },
   {
@@ -695,7 +702,7 @@
    "outputs": [],
    "source": [
     "def i_front_pos_plot():\n",
-    "    colors = px.colors.qualitative.Dark24 # Pastel\n",
+    "    colors = px.colors.sample_colorscale(px.colors.diverging.Portland_r, np.linspace(0, 1, len(DATA[10].keys())))\n",
     "    \n",
     "    fig = go.Figure()\n",
     "    \n",
@@ -707,11 +714,7 @@
     "            x=times, y=ys/5.4, name=sn,\n",
     "            mode='lines+markers',\n",
     "            opacity=DATA[TIMES[0]][sn]['opacity'],\n",
-    "            line=dict(\n",
-    "                color=DATA[TIMES[0]][sn]['color'],\n",
-    "                dash=DATA[TIMES[0]][sn]['style'],\n",
-    "                width=DATA[TIMES[0]][sn]['lw'],\n",
-    "            ),\n",
+    "            line=dict(color=colors[i], dash=None, width=DATA[TIMES[0]][sn]['lw'],),\n",
     "        ))\n",
     "        \n",
     "    def approx_rI(t, rS=5.4 * U.kpc, T=1e4 * U.K, gamma=5./3):\n",
@@ -739,6 +742,7 @@
     "            tickvals=TIMES,\n",
     "            ticktext=[str(tt) for tt in TIMES],\n",
     "            tickfont=dict(size=14),\n",
+    "            tickangle=90,\n",
     "        ),\n",
     "        yaxis=dict(\n",
     "            type='linear', mirror=True, title='r<sub>I-front</sub> / r<sub>S</sub><sup>0</sup>',\n",
@@ -748,8 +752,11 @@
     "            ticktext=[str(yy) for yy in np.linspace(0.4, 1.8, 8)],\n",
     "            tickfont=dict(size=14),\n",
     "        ),\n",
+    "        legend=dict(orientation=\"h\", yanchor=\"top\", y=1.22, xanchor=\"center\", x=.5),\n",
     "    )\n",
-    "            \n",
+    "\n",
+    "    fig.write_image(f\"{FIGURE_DIR}/iliev-5-I-front-pos.svg\", width=width, height=height)\n",
+    "    fig.write_image(f\"{FIGURE_DIR}/iliev-5-I-front-pos.png\", width=width, height=height, scale=3)\n",
     "    fig.show()\n",
     "\n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
@@ -773,7 +780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
